# gpu-acceleration

./: .clangd  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  guide-for-extending-ffi.md
.github/workflows/: build-and-test.yml  setup-macos.yml
example-app/: Cargo.toml  Config.toml  build.rs
example-app/MoproiOSBindings/: mopro.swift
example-app/MoproiOSBindings/MoproBindings.xcframework/: Info.plist
example-app/MoproiOSBindings/MoproBindings.xcframework/ios-arm64/Headers/: module.modulemap
example-app/ios/MoproApp/: ContentView.swift
example-app/ios/MoproApp.xcodeproj/: project.pbxproj
example-app/ios/MoproiOSBindings/MoproBindings.xcframework/ios-arm64_x86_64-simulator/Headers/: moproFFI.h
example-app/src/: lib.rs
gpu-acceleration-app/: .gitignore  README.md  build.rs
gpu-acceleration-app/.github/workflows/: build-and-test.yml
gpu-acceleration-app/ios/gpu-acceleration/: MSMBenchmarkView.swift  gpu-accelerationApp.swift
gpu-acceleration-app/ios/gpu-acceleration-UITests/: gpu_acceleration_UITests.swift
gpu-acceleration-app/ios/gpu-acceleration.xcodeproj/: project.pbxproj
gpu-acceleration-app/ios/gpu-acceleration.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gpu-acceleration-app/ios/gpu-acceleration.xcodeproj/xcshareddata/xcschemes/: mopro-bindings.xcscheme  mopro-test.xcscheme
gpu-acceleration-app/src/: lib.rs
gpu-exploration-app/: .gitignore  Cargo.toml  README.md  mopro-config.toml
gpu-exploration-app/core/src/: lib.rs
gpu-exploration-app/ios/mopro-test/: ContentView.swift  MSMBenchmarkView.swift  mopro_testApp.swift
gpu-exploration-app/ios/mopro-test.xcodeproj/: project.pbxproj
gpu-exploration-app/tests/: test_generated_bindings.rs
mopro-msm/: .gitignore  Cargo.toml  README.md  build.rs
mopro-msm/benches/: e2e.rs  shaders.rs
mopro-msm/benchmark_results/: bucket_wise_msm_benchmark.txt  metal_msm_benchmark.txt
mopro-msm/examples/: bpr_example.rs
mopro-msm/src/: lib.rs  types.rs
mopro-msm/src/msm/: arkworks_pippenger.rs  bucket_wise_msm.rs  halo2curve_msm.rs  mod.rs  precompute_msm.rs
mopro-msm/src/msm/metal/: compile_metal_iphone.sh  msm.rs
mopro-msm/src/msm/metal/abstraction/: limbs_conversion.rs  state.rs
mopro-msm/src/msm/metal/shader/: msm.metallib
mopro-msm/src/msm/metal/shader/fields/: fp_bn254.h.metal
mopro-msm/src/msm/metal/tests/: test_bn254.rs
mopro-msm/src/msm/metal_msm/: cuzk_cpu_reproduction.rs  metal_msm.rs  mod.rs
mopro-msm/src/msm/metal_msm/host/: gpu.rs  metal_wrapper.rs  mod.rs  shader.rs  shader_manager.rs  state.rs
mopro-msm/src/msm/metal_msm/shader/: constants.h  constants.metal
mopro-msm/src/msm/metal_msm/shader/bigint/: bigint.h  bigint.metal  bigint_add_unsafe.metal  bigint_add_unsafe.metal.ir  bigint_add_wide.metal  bigint_sub.metal  constants.metal  u128.h.metal  u256.h.metal
mopro-msm/src/msm/metal_msm/shader/curve/: ec_point.h.metal  jacobian.h  jacobian.metal  jacobian_add_2007_bl.metal  jacobian_add_2007_bl_unsafe.metal  jacobian_dataflow_test.metal  jacobian_dbl_2009_l.metal  jacobian_madd_2007_bl.metal  jacobian_neg.metal  jacobian_scalar_mul.metal  utils.h  utils.metal
mopro-msm/src/msm/metal_msm/shader/cuzk/: Common.h  barrett_reduction.metal  bpr.h  bpr.metal  convert_point_coords_and_decompose_scalars.metal  extract_word_from_bytes_le.metal  kernel_barrett_reduction.metal  kernel_field_mul.metal  pbpr.metal  pbpr_cuzk.metal  smvp.metal  transpose.metal
mopro-msm/src/msm/metal_msm/shader/field/: ff.h  ff.metal  ff_add.metal  ff_reduce.metal  ff_sub.metal  fp_bn254.h.metal
mopro-msm/src/msm/metal_msm/shader/misc/: get_constant.h  get_constant.metal  test_get_constant.metal  types.h  types.metal
mopro-msm/src/msm/metal_msm/shader/mont_backend/: mont.h  mont.metal  mont_mul_cios.metal  mont_mul_cios_benchmarks.metal  mont_mul_modified.metal  mont_mul_modified_benchmarks.metal  mont_mul_optimised.metal  mont_mul_optimised_benchmarks.metal
mopro-msm/src/msm/metal_msm/tests/: common.rs  mod.rs
mopro-msm/src/msm/metal_msm/tests/bigint/: bigint_add_unsafe.rs  bigint_add_wide.rs  bigint_sub.rs  mod.rs
mopro-msm/src/msm/metal_msm/tests/curve/: jacobian_add_2007_b1.rs  jacobian_add_2007_b1_unsafe.rs  jacobian_data_conversion.rs  jacobian_dbl_2009_l.rs  jacobian_madd_2007_bl.rs  jacobian_neg.rs  jacobian_scalar_mul.rs  mod.rs
mopro-msm/src/msm/metal_msm/tests/cuzk/: 0414_e2e.rs  barrett_reduction.rs  bpr.rs  convert_point_coords_and_decompose_scalars.rs  e2e.rs  mod.rs  pbpr.rs  smvp.rs  transpose.rs
mopro-msm/src/msm/metal_msm/tests/field/: ff_add.rs  ff_reduce.rs  ff_sub.rs  mod.rs
mopro-msm/src/msm/metal_msm/tests/misc/: get_constant.rs  mod.rs
mopro-msm/src/msm/metal_msm/tests/mont_backend/: mod.rs  mont_benchmarks.rs  mont_mul_cios.rs  mont_mul_modified.rs  mont_mul_optimised.rs
mopro-msm/src/msm/metal_msm/utils/: barrett_params.rs  data_conversion.rs  limbs_conversion.rs  metal_wrapper.rs  mod.rs  mont_params.rs  shader_manager.rs  window_size_optimizer.rs
mopro-msm/src/msm/trapdoortech_zprize_msm/: mod.rs
mopro-msm/src/msm/utils/: mod.rs  precomputation.rs  preprocess.rs
