[package]
name = "mopro-msm"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[features]
default = ["macos"]

macos = []
ios = []
profiling-release = []

[dependencies]
## Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
instant = "0.1"

# Error handling
thiserror = "=1.0.39"

# ZKP generation
ark-serialize = { version = "=0.4.1", features = ["derive"] }
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4", default-features = false }

# GPU explorations
num-bigint = { version = "=0.4.6", default-features = false, features = ["rand"] }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel"] }
metal = { version = "=0.29.0" }
objc = { version = "=0.2.7" }
proptest = { version = "1.4.0" }
rayon = "1.5.1"
itertools = "0.13.0"
rand = "0.8.5"

[build-dependencies]
enumset = "1.0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dev-dependencies]
serial_test = "3.0.0"
criterion = { version = "=0.3.6", features = ["html_reports"] }

# [dependencies.rayon]
# version = "1"
# optional=false

[[bench]]
name = "e2e"
path = "benches/e2e.rs"
harness = false

[[bench]]
name = "shaders"
path = "benches/shaders.rs"
harness = false
